# wallet

./: .gitignore  pyproject.toml
apps/cards/: models.py  views.py
apps/users/: admin.py  custom_permissions.py  email.py  forms.py  models.py  serializers.py  unfold_admin.py  urls.py  views.py
apps/users/migrations copy/: 0001_initial.py
apps/users/templates/emails/: otp_email.html  password_reset_email.html
config/: settings.py  urls.py
